<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_song_item"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"

        />

    <TextView
        android:id="@+id/textview_songname"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/billie_jean"
        android:layout_toRightOf="@id/imageview_song_item"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@id/imageview_song_item"
        />

    <TextView
        android:id="@+id/textview_singername"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/michael_jackson"
        android:textSize="15sp"
        android:layout_toRightOf="@id/imageview_song_item"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@id/imageview_song_item"
        />
    
    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/dash"
        android:textSize="15sp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@id/textview_singername"
        android:layout_alignBottom="@id/textview_singername"
        />

    <!--collectionName-->
    <TextView
        android:id="@+id/textivew_albumname"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/dash"
        android:text="@string/the_essential_michael_jackson"
        android:layout_alignBottom="@id/textview_singername"
        android:textSize="15sp"
        android:maxLines="1"
        />
</RelativeLayout>